--- a/styles/style.css
+++ b/styles/style.css
@@ -9,13 +9,14 @@ html {
 }
 
 .page {
-  inline-size: 1200px;
-  block-size: 100%;
+  display: flex;
   margin: auto;
   color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
+  inline-size: 1200px;
+  block-size: 100%;
 }
 
 h1,
@@ -35,4 +36,249 @@ fieldset {
 ul,
 ol {
   list-style: none;
+}
+
+.visually-hidden {
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  inline-size: 1px;
+  block-size: 1px;
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+.button {
+  border: 1px solid #fff;
+  padding: 6px 0;
+  color: #fff;
+  font-family: inherit;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 20px;
+  background-color: transparent;
+  cursor: pointer;
+  appearance: none;
+}
+
+.button:active {
+  background-color: #545050;
+}
+
+.button:hover {
+  text-decoration: underline;
+}
+
+.button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: -3px;
+}
+
+.content {
+  display: flex;
+  align-items: end;
+  gap: 30px;
+  margin: auto;
+  padding: 133px 30px;
+  block-size: 100%;
+  inline-size: 100%;
+}
+
+.result {
+  display: flex;
+  flex-direction: column;
+  flex: 0 0 auto;
+  gap: 16px;
+}
+
+.result__video-container {
+  position: relative;
+  block-size: 386px;
+  inline-size: 711px;
+}
+
+.result__video {
+  object-fit: cover;
+  object-position: center;
+  block-size: 100%;
+  inline-size: 100%;
+}
+
+.search-form {
+  display: flex;
+  align-items: start;
+  align-content: space-between;
+}
+
+.search-form__fieldset {
+  flex: 1 1 0;
+  border: none;
+  min-inline-size: 0;
+}
+
+.search-form__fieldset-title {
+  padding-bottom: 5px;
+  font-weight: 400;
+  font-size: 18px;
+}
+
+.search-form__label {
+  display: block;
+  font-weight: 400;
+  font-size: 18px;
+}
+
+.search-form__label > * {
+  width: fit-content;
+}
+
+.search-form__textfield {
+  border-inline-start: none;
+  border-inline-end: none;
+  border-block-start: 1px solid rgba(255 255 255/0.7);
+  border-block-end: 1px solid rgba(255 255 255/0.7);
+  padding-inline: 0;
+  padding-block: 1.5px;
+  color: rgba(255 255 255/0.7);
+  font-family: inherit;
+  font-size: inherit;
+  background-color: transparent;
+  min-inline-size: 225px;
+  appearance: none;
+}
+
+.search-form__textfield:active {
+  outline: 1px solid rgba(255 255 255/0.7);
+}
+
+.search-form__textfield:focus-visible {
+  outline: 1px solid rgba(255 255 255/0.7);
+  outline-offset: 1px;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  gap: 15px;
+}
+
+.search-form__checkbox-list > .search-form__label {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.search-form__pseudo-checkbox {
+  display: inline-flex;
+  border: 1px solid #fff;
+  block-size: 19px;
+  inline-size: 19px;
+}
+
+input[type='checkbox']:checked + .search-form__pseudo-checkbox::after {
+  content: '';
+  display: block;
+  margin: auto;
+  background-color: #fff;
+  block-size: 15px;
+  inline-size: 15px;
+}
+
+.search-form__submit-button {
+  flex: 0 0 auto;
+  align-self: flex-end;
+  inline-size: 194px;
+}
+
+.content__details {
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 0;
+  align-self: stretch;
+  min-inline-size: 0;
+}
+
+.title {
+  flex: 0 0 auto;
+  padding-block-end: 26px;
+  font-family: Oswald, sans-serif;
+  font-weight: bold;
+  font-size: 75px;
+  line-height: 0.94em;
+  text-transform: uppercase;
+  min-block-size: 0;
+}
+
+.content__accent {
+  color: #545050;
+}
+
+.content__list {
+  position: relative;
+  flex: 1 1 0;
+  padding-bottom: 1px;
+  overflow: auto;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.content__list::-webkit-scrollbar {
+  display: none;
+}
+
+.content__list > li + li {
+  margin-top: 30px;
+}
+
+.content__list-item:hover {
+  text-decoration: underline;
+}
+
+.content__list-item:active {
+  background-color: #545050;
+}
+
+.content__card-link {
+  display: block;
+  margin-block-end: 6px;
+  color: #fff;
+  text-decoration: none;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: -1px;
+}
+
+.content__video-card {
+  display: flex;
+  align-items: start;
+}
+
+.content__video-card-description-container {
+  flex: 1 1 0;
+  min-inline-size: 0;
+}
+
+.content__video-card-title {
+  font-family: Oswald, sans-serif;
+  font-weight: bold;
+  font-size: 30px;
+  text-transform: uppercase;
+  word-break: break-all;
+}
+
+.content__video-card-description {
+  font-size: 18px;
+  line-height: 0.9em;
+}
+
+.content__video-card-thumbnail {
+  flex: 0 0 auto;
+  inline-size: 194px;
+  block-size: 103px;
+}
+
+.more-button {
+  display: block;
+  inline-size: 100%;
 }
