--- a/styles/style.css
+++ b/styles/style.css
@@ -78,10 +78,12 @@ ol {
   display: flex;
   align-items: end;
   gap: 30px;
+  align-self: flex-end;
   margin: auto;
   padding: 133px 30px;
   block-size: 100%;
   inline-size: 100%;
+  min-inline-size: 800px;
 }
 
 .result {
@@ -89,6 +91,7 @@ ol {
   flex-direction: column;
   flex: 0 0 auto;
   gap: 16px;
+  align-self: flex-end;
 }
 
 .result__video-container {
@@ -193,6 +196,7 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox::after {
   display: flex;
   flex-direction: column;
   flex: 1 1 0;
+  justify-content: end;
   align-self: stretch;
   min-inline-size: 0;
 }
