--- a/styles/style.css
+++ b/styles/style.css
@@ -80,10 +80,8 @@ ol {
   gap: 30px;
   align-self: flex-end;
   margin: auto;
-  padding: 133px 30px;
-  block-size: 100%;
-  inline-size: 100%;
-  min-inline-size: 800px;
+  inline-size: 1140px;
+  block-size: 534px;
 }
 
 .result {
