--- a/styles/style.css
+++ b/styles/style.css
@@ -135,6 +135,22 @@ ol {
   width: fit-content;
 }
 
+.search-form__checkbox-list > .search-form__label {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.search-form__label > input:focus,
+.search-form__label > input:focus-visible {
+  outline: none;
+}
+
+.search-form__label:has(input:focus-visible) {
+  width: fit-content;
+  outline: 1px solid rgba(255 255 255/0.7);
+}
+
 .search-form__textfield {
   border-inline-start: none;
   border-inline-end: none;
@@ -162,12 +178,6 @@ ol {
 .search-form__checkbox-list {
   display: flex;
   gap: 15px;
-}
-
-.search-form__checkbox-list > .search-form__label {
-  display: flex;
-  align-items: center;
-  gap: 5px;
 }
 
 .search-form__pseudo-checkbox {
