--- a/styles/style.css
+++ b/styles/style.css
@@ -83,7 +83,6 @@ ol {
   padding-inline: 30px;
   padding-block: 133px;
   inline-size: 1200px;
-  block-size: 800px;
 }
 
 .result {
@@ -92,6 +91,7 @@ ol {
   flex: 0 0 auto;
   gap: 16px;
   align-self: flex-end;
+  margin-top: 78px;
 }
 
 .result__video-container {
@@ -129,6 +129,7 @@ ol {
   display: block;
   font-weight: 400;
   font-size: 18px;
+  cursor: pointer;
 }
 
 .search-form__label > * {
@@ -149,6 +150,11 @@ ol {
 .search-form__label:has(input:focus-visible) {
   width: fit-content;
   outline: 1px solid rgba(255 255 255/0.7);
+  outline-offset: 1px;
+}
+
+.search-form__label:has(.search-form__label-text:hover) {
+  text-decoration: underline;
 }
 
 .search-form__textfield {
@@ -231,24 +237,10 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox::after {
   flex: 1 1 0;
   padding-bottom: 1px;
   overflow: auto;
-  scrollbar-width: none;
-  -ms-overflow-style: none;
-}
-
-.content__list::-webkit-scrollbar {
-  display: none;
 }
 
 .content__list > li + li {
   margin-top: 30px;
-}
-
-.content__list-item:hover {
-  text-decoration: underline;
-}
-
-.content__list-item:active {
-  background-color: #545050;
 }
 
 .content__card-link {
@@ -258,9 +250,21 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox::after {
   text-decoration: none;
 }
 
+.content__card-link:hover {
+  text-decoration: underline;
+}
+
+.content__card-link:active {
+  background-color: #545050;
+}
+
 .content__card-link:focus-visible {
   outline: 1px solid #fff;
   outline-offset: -1px;
+}
+
+.content__card-link_current {
+  background-color: #545050;
 }
 
 .content__video-card {
@@ -274,11 +278,13 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox::after {
 }
 
 .content__video-card-title {
+  overflow: hidden;
   font-family: Oswald, sans-serif;
   font-weight: bold;
   font-size: 30px;
   text-transform: uppercase;
-  word-break: break-all;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .content__video-card-description {
@@ -288,6 +294,7 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox::after {
 
 .content__video-card-thumbnail {
   flex: 0 0 auto;
+  object-position: center;
   inline-size: 194px;
   block-size: 103px;
 }
