--- a/styles/style.css
+++ b/styles/style.css
@@ -153,7 +153,7 @@ ol {
   outline-offset: 1px;
 }
 
-.search-form__label:has(.search-form__label-text:hover) {
+.search-form__label:hover .search-form__label-text {
   text-decoration: underline;
 }
 
